# employee-attrition-predictor

./: README.md  pyproject.toml  requirements.txt
notebook/: analysing.ipynb  eaf-dataset-annelyse.ipynb  eaf-model.ipynb  model.ipynb
src/: main.py
