[project]
name = "employee-attrition-predictor"
version = "0.1.0"
description = "CSE303 (Statistics for Data Science) Course project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.0.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jupyterlab>=4.4.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
